<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_note"
    app:startDestination="@id/navHome">

    <fragment
        android:id="@+id/navCalendar"
        android:name="com.github.almasud.NotePad.views.fragments.CalendarScreen"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_calender"/>
    <fragment
        android:id="@+id/navNote"
        android:name="com.github.almasud.NotePad.views.fragments.NoteScreen"
        android:label="@string/my_notes"
        tools:layout="@layout/fragment_note">
        <action
            android:id="@+id/action_navNote_to_navNoteForm"
            app:destination="@id/navNoteForm" />
        <action
            android:id="@+id/action_navNote_to_navNoteDetails"
            app:destination="@id/navNoteDetails" />
    </fragment>
    <fragment
        android:id="@+id/navHome"
        android:name="com.github.almasud.NotePad.views.fragments.HomeScreen"
        android:label="@string/home"
        tools:layout="@layout/fragment_home"/>
    <fragment
        android:id="@+id/navFavorite"
        android:name="com.github.almasud.NotePad.views.fragments.FavoriteScreen"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorite"/>
    <fragment
        android:id="@+id/navSettings"
        android:name="com.github.almasud.NotePad.views.fragments.SettingScreen"
        android:label="@string/settings"
        tools:layout="@layout/fragment_setting"/>
    <fragment
        android:id="@+id/navNoteForm"
        android:name="com.github.almasud.NotePad.views.fragments.NoteFormScreen"
        android:label="{title}"
        tools:layout="@layout/fragment_note_form" >
        <argument
            android:name="note"
            app:argType="com.github.almasud.NotePad.models.Note"
            app:nullable="true"
            android:defaultValue="@null"/>
        <argument
            android:name="title"
            app:argType="string"
            android:defaultValue="Make a Note"/>
    </fragment>
    <fragment
        android:id="@+id/navNoteDetails"
        android:name="com.github.almasud.NotePad.views.fragments.NoteDetailsScreen"
        android:label="{title}"
        tools:layout="@layout/fragment_note_details" >
        <argument
            android:name="noteId"
            app:argType="integer" />
        <argument
            android:name="title"
            app:argType="string"
            android:defaultValue="Note Details" />
        <action
            android:id="@+id/action_navNoteDetails_to_navNoteForm"
            app:destination="@id/navNoteForm" />
    </fragment>
</navigation>