<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.HomeScreen"
    android:background="@color/colorPrimary">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/activity_vertical_margin">

            <LinearLayout
                android:id="@+id/layoutUserInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome"
                        android:textSize="30sp"
                        android:textColor="@color/black"
                        android:textAlignment="center"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="John Doe!"
                        android:textSize="30sp"
                        android:textColor="@color/colorSecondary"
                        android:textAlignment="center"
                        android:layout_marginStart="@dimen/activity_half_margin"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/circularImageProfile"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/profile_image"
                        app:civ_border_color="@color/colorPrimary"
                        app:civ_border_width="5dp"
                        android:layout_margin="@dimen/activity_half_margin"/>

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutUserInfo"
                android:background="@color/white"
                app:cardElevation="10dp"
                app:cardCornerRadius="10dp"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginVertical="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/etSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search"
                    android:textColorHint="@color/colorGrayDeep"
                    android:textColor="@color/black"
                    android:padding="@dimen/activity_vertical_margin"
                    android:background="@android:color/transparent"
                    android:inputType="text"
                    android:drawableEnd="@drawable/ic_search"
                    tools:ignore="Autofill" />
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:id="@+id/layoutActivityCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:layout_below="@+id/cvSearch">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvNotesCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorSecondary"
                    app:cardElevation="10dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginEnd="@dimen/activity_half_margin">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingVertical="@dimen/activity_vertical_margin"
                        android:paddingHorizontal="@dimen/activity_half_margin">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginBottom="@dimen/activity_half_margin">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/ic_documents"
                                app:tint="@color/white"
                                android:layout_alignParentStart="true"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="20"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:layout_alignParentEnd="true"
                                android:textAlignment="center"
                                android:layout_marginTop="-3dp" />

                        </RelativeLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/notes"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvRemindersCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#F52439"
                    app:cardElevation="10dp"
                    app:cardCornerRadius="10dp"
                    android:layout_marginEnd="@dimen/activity_half_margin">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingVertical="@dimen/activity_vertical_margin"
                        android:paddingHorizontal="@dimen/activity_half_margin">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginBottom="@dimen/activity_half_margin">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/ic_three_underline"
                                app:tint="@color/white"
                                android:layout_alignParentStart="true"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="13"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:layout_alignParentEnd="true"
                                android:textAlignment="center"
                                android:layout_marginTop="-3dp" />

                        </RelativeLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/reminders"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvSchedulersCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:backgroundTint="#6B4CE8"
                    app:cardElevation="10dp"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingVertical="@dimen/activity_vertical_margin"
                        android:paddingHorizontal="@dimen/activity_half_margin">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginBottom="@dimen/activity_half_margin">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:src="@drawable/ic_calendar"
                                app:tint="@color/white"
                                android:layout_alignParentStart="true"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="0"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:layout_alignParentEnd="true"
                                android:textAlignment="center"
                                android:layout_marginTop="-3dp" />

                        </RelativeLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/schedulers"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvCalendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutActivityCount"
                android:background="@color/white"
                app:cardElevation="10dp"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:layout_marginVertical="@dimen/activity_vertical_margin">

                <CalendarView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>